ht_sfNewsCenter/src/objects/Google_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Cancel_URL__c</fullName>
        <label>Cancel URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Results</label>
        <summaryForeignKey>Google_Alert_Result__c.Google_Alert__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>News Center Interest</label>
    <nameField>
        <label>News Center Interest Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News Center Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>